Work on data table.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -589,17 +589,25 @@
     Year = {1996}
 }
 
-@inproceedings{fairchild2015did,
-  title={When Did Midcontinent Rift Volcanism End and Where Was Laurentia at that Time?},
-  author={Fairchild, Luke},
-  booktitle={2015 AGU Fall Meeting},
-  year={2015},
-  organization={Agu}
+@article{krogh1987precise,
+  title={Precise U--Pb isotopic ages of diabase dykes and mafic to ultramafic rocks using trace amounts of baddeleyite and zircon},
+  author={Krogh, TE and Corfu, F and Davis, DW and Dunning, GR and Heaman, LM and Kamo, SL and Machado, N and Greenough, JD and Nakamura, E},
+  journal={Mafic dyke swarms. Edited by HC Halls and WF Fahrig. Geological Association of Canada, Special Paper},
+  volume={34},
+  pages={147--152},
+  year={1987}
+}
+
+@article{fairchild2016end,
+  title={The end of Midcontinent Rift magmatism and the paleogeography of Laurentia},
+  author={Fairchild, Luke M. and Swanson-Hysell, Nicholas L. and Ramezani, Jahandar and Sprain, Courtney J. and Bowring, Samuel A.},
+  Journal={Lithosphere},
+  year={2016},
 }
 
 @article{henry1977paleomagnetism,
   title={Paleomagnetism of the upper Keweenawan sediments: the Nonesuch Shale and Freda Sandstone},
-  author={Henry, Steven G and Mauk, Frederick J and der Voo, Rob Van},
+  author={Henry, Steven G and Mauk, Frederick J and van der Voo, Robert},
   journal={Canadian Journal of Earth Sciences},
   volume={14},
   number={5},
