--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -857,7 +857,12 @@ consistent with the conclusions of \citet{idnurm1985lateII}.
 \clearpage
 
 \begin{landscape}
+\begin{table}
+\small
 \include{tables/keweenawan_poles}
+\caption{}
+\label{tab:keweenawan_poles}
+\end{table}
 \end{landscape}
 
 We investigated inverting the Keweenawan APW track for one, two, and three paleomagnetic Euler poles.
